--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,16 +1,12 @@
-<%- include("partials/header", { title: "Home" }) %>
+<%- include("partials/header", { title: "About" }) %>
 
 <section class="home main-content" id="home">
     <div class="content">
-        <h3>JewelFind</h3>
-        <span>One stop for all your jewelry queries</span>
+        <h3>About Us</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
             Numquam cum nam facere? Iusto dicta, nisi veniam molestias voluptas perferendis possimus minus aliquid architecto
             consequatur, provident sed magni odit labore vel.</p>
-           <a href="/products" class="btn"> Search Now</a>
     </div>
 </section>
-
-
 
 <%- include("partials/footer") %>
