--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,8 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
             Numquam cum nam facere? Iusto dicta, nisi veniam molestias voluptas perferendis possimus minus aliquid architecto
             consequatur, provident sed magni odit labore vel.</p>
-           <a href="/products" class="btn"> Search Now</a>
+           <a href="/search/materials" class="btn">Search Now By Material</a>
+           <a href="/search/vendors" class="btn">Search Now By Vendors</a>
     </div>
 </section>
 
