--- a/views/search/materials.ejs
+++ b/views/search/materials.ejs
@@ -40,7 +40,8 @@
                                 <strong>Vendor:</strong> <%= material.vendor_name %> <br>
                                 <strong>Location:</strong> <%= material.city %>, <%= material.state %> <br>
                                 <strong>Stock:</strong> <%= material.stock_quantity %> units <br>
-                                <strong>Price:</strong> $<%= material.stock_price %>
+                                <strong>Price:</strong> $<%= material.stock_price %> <br>
+                                <strong>Material ID:</strong> <%= material.material_id %>
                             </p>
                         </div>
                         <div class="card-footer">
