--- a/views/search/vendors.ejs
+++ b/views/search/vendors.ejs
@@ -42,7 +42,8 @@
                             <p class="card-text">
                                 <strong>Location:</strong> <%= vendor.city %>, <%= vendor.state %> <br>
                                 <strong>Rating:</strong> <%= vendor.overall_rating %> / 5 <br>
-                                <strong>Contact:</strong> <%= vendor.contact_info %>
+                                <strong>Contact:</strong> <%= vendor.contact_info %> <br>
+                                <strong>Vendor ID:</strong> <%= vendor.vendor_id %>
                             </p>
                         </div>
                         <div class="card-footer">
